# cpp-labwork-5

./: .gitignore  CMakeLists.txt  README.md
lib/: Array3D.cpp  Array3D.h  CMakeLists.txt
tests/: CMakeLists.txt  array3d_test.cpp
